--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>oop18-bmbman</name>
+	<name>oop18-bmbman-penazzi-ragazzini-rettaroli-spadoni-sternini</name>
 	<comment></comment>
 	<projects>
 	</projects>
